packages/svelte/tests/compiler-errors/samples/dynamic-element-binding-invalid/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-binding',
		message: "'value' binding can only be used with <input>, <textarea>, <select>"
	}
});
